# the-tutornator

./: .gitignore  README.md  mypi.ini  pyproject.toml
api/: alchemist.py  app.py  authviews.py  constants.py  db.sqlite  extensions.py  utils.py
api/views/: authviews.py
tasks/: build.py
tests/: db.sqlite  test_extensions.py
webapp/: package-lock.json
webapp/src/: routes.js
webapp/src/components/: Footer.vue  Header.vue
webapp/src/components/public/: AdminTools.vue  Calendar.vue  Login.vue  ManageAccount.vue  Tutors.vue
webapp/src/store/modules/: general.js
