[tool.poetry]
name = "the-tutornator"
version = "0.1.0"
description = ""
authors = ["Ivan Gonzalez Ibarra <ivan.gonzalez@liveviewtech.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask_sqlalchemy = "^2.4.4"
flask_httpauth = "^4.2.0"
pyjwt = "^2.0.1"
flask_cors = "^3.0.10"

[tool.poetry.dev-dependencies]
invoke = "^1.5.0"
pytest-dotenv = "^0.5.2"
yapf = "^0.30.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
