[tool.poetry]
name = "the-tutornator"
version = "0.1.0"
description = ""
authors = ["Ivan Gonzalez Ibarra <ivan.gonzalez@liveviewtech.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask_sqlalchemy = "^2.4.4"
flask_httpauth = "^4.2.0"
pyjwt = "^2.0.1"
flask_cors = "^3.0.10"
invoke = "^1.5.0"
yapf = "^0.30.0"

[tool.poetry.dev-dependencies]
pytest-dotenv = "^0.5.2"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
